--- a/mod_ventas/templates/mod_ventas/index.html
+++ b/mod_ventas/templates/mod_ventas/index.html
@@ -8,12 +8,8 @@
 {% include 'breadcrumbs.html' %}
     <h1>Módulo de Ventas</h1>
     <ul>
-        <li><a href="{% url 'productos'%}">Productos</a></li>
-    </ul>
-    <ul>
-        <li><a href="{% url 'descuentos'%}">Descuentos</a></li>
-    </ul>
-    <ul>
-        <li><a href="{% url 'facturas'%}">Facturas</a></li>
+        {% for sub_mod_path in sub_mods_paths %}
+            <li><a href="{% url sub_mod_path %}">{{ sub_mod_path|capfirst }}</a></li>
+        {% endfor %}
     </ul>
 {% endblock content %}
