best practices code clean - add favicon - remove unwanted images

--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_detalle.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_detalle.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {{ producto.nombre }}
+    Producto | {{ producto.nombre }}
 {% endblock title %}
 {% block content %}
 {% include 'breadcrumbs.html' %}
