updated breadcrumbs and submenus

--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/productos.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/productos.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 {% include 'breadcrumbs.html' %}
-    <h1>Productos</h1>
+    <h1 class="module-title">Productos</h1>
     <section class="bottom-section d-flex justify-content-center">
         <div class="table-responsive">
           <table class="table table-striped">
@@ -47,5 +47,6 @@
         </div>
       </section>
 {% endblock content %}
+
 
 
