--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,6 +16,36 @@ main {
   padding-bottom: 128px;
 }
 
+.module-title {
+  text-align: center;
+  /* font-weight: 500; */
+  margin-top: 16px;
+
+}
+
+.breadcrumb{
+  width: fit-content;
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #CACACA;
+}
+
+.breadcrumb-item{
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--font-color)
+}
+
+.breadcrumb-item:last-child {
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.breadcrumb-item a{
+  color: inherit;
+}
+
 
 /******** NAVBAR ********/
 .navbar {
@@ -83,9 +113,14 @@ main {
   padding: 54px 12px 24px;
 }
 
-.top-section .card {
+.card {
   width: 166px;
+  min-width: 110px;
   border-radius: 2px;
+}
+
+a .card:hover {
+  border: 1.5px solid var(--primary-color);
 }
 
 .row {
@@ -173,7 +208,7 @@ main {
 
 /******** BOTTOM SECTION ********/
 .bottom-section {
-  padding: 0 12px;
+  padding: 32px 12px;
 }
 
 .table {
@@ -339,6 +374,7 @@ textarea {
 
   .card {
     max-width: 166px;
+    height: 150px;
     width: 166px;
   }
 
