Add some modules - Best practices fix

--- a/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas.html
+++ b/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas.html
@@ -3,7 +3,7 @@
 {% block title %}
     Facturas
 {% endblock title %}
+
 {% block content %}
-    <h1>Este es el módulo de Facturas</h1>
-    <p>Hola mundo</p>
+    <h1>Facturas</h1>
 {% endblock content %}
