--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="{% url 'proveedores_index' %}" aria-current="page">
+                <a class="nav-link active" href="{% url 'proveedores' %}" aria-current="page">
                   <img class="offcanvas-nav-icon" src="{% static 'icons/inventario.png' %}" alt="icono de inventario">
                   Proveedores
                 </a>
