--- a/mod_ventas/templates/mod_ventas/index.html
+++ b/mod_ventas/templates/mod_ventas/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 {% include 'breadcrumbs.html' %}
-    <h1 class="module-title">Módulo de Ventas</h1>
+    <h1 class="module-title">Ventas</h1>
     <div class="d-flex flex-wrap justify-content-center py-5 gap-5">
         {% for sub_mod_path in sub_mods_paths %}
         <a class="text-decoration-none" href="{% url sub_mod_path %}">
