--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/productos.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/productos.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %}
 {% load static %}
 
 {% block title %}
@@ -54,7 +54,7 @@
                     <p>{{ producto.descripcion }}</p>
                 </td>
                   <td>
-                    <p><a href="{% url 'carrito_agregar' producto.slug%}"><img src="../static\icons\add-cart.svg"
+                    <p><a href="{% url 'carrito_agregar' producto.id%}"><img src="../static\icons\add-cart.svg"
                       alt="icono de annadir a carrito"></a></p>
                 </td>
               </tr>
@@ -63,7 +63,7 @@
         </table>
       </div>
     </section>
-{% endblock content %}
+{% endblock content %} {% endcomment %}
 
 
 
