--- a/templates/proyecto_u/404.html
+++ b/templates/proyecto_u/404.html
@@ -5,6 +5,6 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Ups! Something went wrong...</h1>
+    <h1>404 - Not Found!</h1>
 {% endblock content %}
 
