Proveedor module update - general format fix

--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/index.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/index.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h1>Módulo de Proveedores</h1>
     <ul>
-        <li><a href="{% url 'proveedores'%}">Proveedores</a></li>
+        <li><a href="{% url 'proveedor_list'%}">Proveedores</a></li>
     </ul>
 {% endblock content %}
