--- a/templates/base.html
+++ b/templates/base.html
@@ -39,19 +39,31 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'proveedor_list' %}" aria-current="page">
-                  <img class="offcanvas-nav-icon" src="{% static 'icons/inventario.png' %}" alt="icono de inventario">
-                  Proveedores
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'ventas_index' %}">
-                  <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
-                  Ventas
-                </a>
-              </li>
               {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link active" href="{% url 'proveedor_list' %}" aria-current="page">
+                    <img class="offcanvas-nav-icon" src="{% static 'icons/inventario.png' %}" alt="icono de inventario">
+                    Proveedores
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'ventas_index' %}">
+                    <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
+                    Ventas
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'lista_ordenes' %}">
+                    <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
+                    Ordenes
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'register' %}">
+                    <img class="offcanvas-nav-icon">
+                    Registrar Usuario
+                  </a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout' %}">
                     <img class="offcanvas-nav-icon">
@@ -59,12 +71,6 @@
                   </a>
                 </li>
               {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">
-                  <img class="offcanvas-nav-icon">
-                  Registrar Usuario
-                </a>
-              </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'login' %}">
                     <img class="offcanvas-nav-icon">
