--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
   <body>
-    <div class="container">
+    <div class="container-fluid container-xxl">
       {% if messages %}
           {% for message in messages %}
             <div class="alert alert-success" role="alert">
