--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -1,13 +1,85 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Productos</h1>
-    <a href="{% url 'producto_crear' %}">Crear Producto</a>
-    <ul>
+    <h1 class="module-title">Productos</h1>
+    <div class="buttons-container col-12 mt-5">
+      <a  class="btn d-inline" href="">
+        Generar Reporte
+        <img class="btn-icon" src="../static\icons\PDF.svg" alt="icono de pdf">
+      </a>
+      <a  class="btn d-inline" href="{% url 'producto_crear' %}">
+        Añadir Producto
+        <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
+      </a>
+    </div>
+    <section class="bottom-section d-flex justify-content-center">
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr class="table-header">
+              <th scope="col">Imagen</th>
+              <th scope="col">ID Producto</th>
+              <th scope="col">Categoría</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Precio Venta</th>
+              <th scope="col">Proveedor</th>
+              <th scope="col">Stock</th>
+              <th scope="col">Lote</th>
+              <th scope="col">Vencimiento</th>
+              <th scope="col">Descripción</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
       {% for producto in object_list %}
-        <li>
-          <a href="{% url 'producto_detalle' producto.pk %}">{{ producto.nombre }}</a>
-        </li>
+          <tr>
+          <td>
+            <div class="img-table-container">
+            <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}">
+            </div>
+          </td>
+          <td>
+            <p>{{ producto.id }}</p>
+          </td>
+          <td>
+            <p>{{ producto.tipo_producto }}</p>
+          </td>
+          <td>
+            <p>{{ producto.nombre }}</p>
+          </td>
+          <td>
+            <p>{{ producto.precio_venta }}</p>
+          </td>
+          <td>
+            <p>{{ producto.proveedor }}</p>
+          </td>
+          <td>
+            <p>{{ producto.stock }}</p>
+          </td>
+          <td>
+            <p>{{ producto.codigo_lote }}</p>
+          </td>
+          <td>
+            <p>{{ producto.fecha_vencimiento }}</p>
+          </td>
+          <td>
+            <p>{{ producto.descripcion }}</p>
+          </td>
+          <td>
+            <div class="action-icons-container">
+              <a href="{% url 'producto_editar' producto.id %}">
+                <img src="../static\icons\Edit.svg" alt="icono de editar">
+              </a>
+              <a href="{% url 'producto_borrar' producto.id %}">
+                <img src="../static\icons\Delete.svg" alt="icono de editar">
+              </a>   
+             </div>
+          </td>
+        </tr>
       {% endfor %}
-    </ul>
+        </tbody>
+      </table>
+      </div>
+    </section>
 {% endblock %}
+
