--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -51,7 +51,7 @@
             <p>{{ producto.precio_venta }}</p>
           </td>
           <td>
-            <p>{{ producto.proveedor }}</p>
+            <p>{{ producto.proveedor.nombre }}</p>
           </td>
           <td>
             <p>{{ producto.stock }}</p>
