Add montos facturados por producto functionality

--- a/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas.html
+++ b/mod_ventas/sub_mod_facturas/templates/sub_mod_facturas/facturas.html
@@ -15,4 +15,5 @@
             <li>No hay facturas disponibles.</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'monto_facturado_por_producto' %}">Montos facturados por producto</a>
 {% endblock content %}
