--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,14 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'register' %}">
-                    <img class="offcanvas-nav-icon">
+                    <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
                     Registrar Usuario
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'facturas' %}">
+                    <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
+                    Facturas
                   </a>
                 </li>
                 <li class="nav-item">
