updated login and providers views

--- a/mod_login/templates/mod_login/register_user.html
+++ b/mod_login/templates/mod_login/register_user.html
@@ -5,10 +5,31 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Registro</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p}}
-        <input type="submit" class="btn btn-primary">Submit</button>
-      </form>
+    <div class="container-fluid mx-auto my-5 p-5 bg-white login-container">
+
+    	<div class="d-flex flex-column gap-3">
+      	<h1 class="login-title">Sistema de Administración</h1>
+        <h2 class="login-subtitle">Registro</h2>
+        </div>
+      	<form class="register-form d-flex gap-4 mt-3" action="" method="POST">
+        	{% csrf_token %}
+					<div class="form-inputs-container d-flex flex-column gap-4">
+						{% for field in form %}
+						<div class="form-group">
+							{{ field.label_tag }}
+							{{ field }}
+						</div>
+						{% endfor %}
+					</div>
+          
+
+					<div class="register-constraints">
+						<ul class="d-flex flex-column gap-4">
+							<li>El usuario debe tener menos de 150 caracteres.</li>
+							<li>La contraseña debe contener al menos 8 caracteres.</li>
+						</ul>
+					</div>
+        </form>
+        <button type="submit" class="btn mt-5 mx-auto">Submit</button>
+    </div>
 {% endblock content %}
