--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -219,7 +219,8 @@ a .card:hover {
   border: 1px solid #CACACA;
 }
 
-th {
+th,
+.provider-table th {
   min-width: 122px;
   max-width: 122px;
   padding: 16px 0px 20px !important;
@@ -230,6 +231,11 @@ th {
   text-overflow: ellipsis;
   color: var(--secondary-color) !important;
   border-bottom: none;
+}
+
+.provider-table th{
+  min-width: 164px;
+  max-width: 164px;
 }
 
 tbody td {
@@ -252,6 +258,10 @@ tbody td p {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.provider-table tbody td p{
+  display: block;
 }
 
 .img-table-container {
@@ -314,7 +324,8 @@ tbody td p {
 
 .product-form input[type="text"],
 .product-form input[type="file"],
-.product-form input[type="number"]{
+.product-form input[type="number"],
+.product-form input[type="email"]{
   background-color: #FAFAFA;
   padding: 6px 12px;
   border-radius: 6px;
@@ -389,10 +400,41 @@ tbody td p {
   width: 100%;
 }
 
+.register-form .form-group {
+  width: 80%;
+}
+
+.register-form .form-group label{
+  font-size: 20px;
+  color: var(--primary-color);
+}
+
+.register-form .form-group input[type="text"],
+.register-form .form-group input[type="email"],
+.register-form .form-group input[type="password"]{
+  background-color: #FAFAFA;
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: 1px solid #dee2e6;
+  outline: none;
+}
+
 /******** RESPONSIVE ********/
 @media screen and (max-width: 575px){
   .buttons-container {
     justify-content: center;
+  }
+
+  .register-form{
+    flex-wrap: wrap;
+  }
+
+  .register-form .form-group {
+    width: 100%;
+  }
+
+  .form-inputs-container{
+    width: 100%;
   }
 }
 
