--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
@@ -6,13 +6,18 @@
     <div class="buttons-container col-12 mt-5">
         <a  class="btn d-inline" href="">
           Generar Reporte
-          <img class="btn-icon" src="../static\icons\PDF.svg" alt="icono de pdf">
+          <img class="btn-icon" src="{% static 'icons/PDF.svg' %}" alt="icono de pdf">
         </a>
         <a  class="btn d-inline" href="{% url 'proveedor_crear' %}">
           Añadir Proveedor
-          <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
+          <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de añadir">
         </a>
-      </div>
+        <!-- Nuevo botón para pago a proveedores -->
+        <a  class="btn d-inline" href="{% url 'pago_nuevo' %}">
+          Realizar Pago
+          <img class="btn-icon" src="{% static 'icons/Payment.svg' %}" alt="icono de pago">
+        </a>
+    </div>
     <section class="bottom-section d-flex justify-content-center">
         <div class="table-responsive">
           <table class="table table-striped provider-table">
@@ -47,10 +52,10 @@
             <td>
               <div class="action-icons-container">
                 <a href="{% url 'proveedor_editar' proveedor.pk %}">
-                  <img src="../static\icons\Edit.svg" alt="icono de editar">
+                  <img src="{% static 'icons/Edit.svg' %}" alt="icono de editar">
                 </a>
                 <a href="{% url 'proveedor_borrar' proveedor.pk %}">
-                  <img src="../static\icons\Delete.svg" alt="icono de editar">
+                  <img src="{% static 'icons/Delete.svg' %}" alt="icono de eliminar">
                 </a>   
                </div>
             </td>
