Tiempo despacho base feature

--- a/mod_ventas/sub_mod_ordenes/templates/sub_mod_ordenes/detalle_orden.html
+++ b/mod_ventas/sub_mod_ordenes/templates/sub_mod_ordenes/detalle_orden.html
@@ -6,6 +6,8 @@
     <p>Nombre del cliente: {{ orden.nombre_cliente }}</p>
     <p>Dirección de Envío: {{ orden.direccion_envio }}</p>
     <p>Fecha de Creación: {{ orden.fecha_creacion }}</p>
+    <p>Tiempo despacho esperado: {{ orden.tiempo_despacho_esperado }}</p>
+    <p>Tiempo de despacho actual: {{ orden.tiempo_despacho_real }}</p>
     <p>Completada: {{ orden.completada }}</p>
     <h3>Items</h3>
     <ul>
