Proverdor report update

--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
@@ -17,6 +17,10 @@
           Realizar Pago
           <img class="btn-icon" src="{% static 'icons/Payment.svg' %}" alt="icono de pago">
         </a>
+        <a  class="btn d-inline" href="{% url 'proveedor_reporte' %}">
+          Reporte de Proveedores
+          <img class="btn-icon" src="{% static 'icons/Payment.svg' %}" alt="icono de pago">
+        </a>
     </div>
     <section class="bottom-section d-flex justify-content-center">
         <div class="table-responsive">
