Productos reports update

--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="module-title">Productos</h1>
     <div class="buttons-container col-12 mt-5">
-      <a  class="btn d-inline" href="">
+      <a  class="btn d-inline"  href="{% url 'producto_report' %}">
         Generar Reporte
         <img class="btn-icon" src="../static\icons\PDF.svg" alt="icono de pdf">
       </a>
