--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_list.html
@@ -12,14 +12,13 @@
           Añadir Proveedor
           <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de añadir">
         </a>
-        <!-- Nuevo botón para pago a proveedores -->
         <a  class="btn d-inline" href="{% url 'pago_nuevo' %}">
           Realizar Pago
-          <img class="btn-icon" src="{% static 'icons/Payment.svg' %}" alt="icono de pago">
+          <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de pago">
         </a>
         <a  class="btn d-inline" href="{% url 'proveedor_reporte' %}">
           Reporte de Proveedores
-          <img class="btn-icon" src="{% static 'icons/Payment.svg' %}" alt="icono de pago">
+          <img class="btn-icon" src="{% static 'icons/Add.svg' %}" alt="icono de pago">
         </a>
     </div>
     <section class="bottom-section d-flex justify-content-center">
